# SoftwareEngineering

./: CMakeLists.txt  README-5.md  README.md  experiment_report.txt  run_libfuzzer.ps1  run_tests.ps1
.github/workflows/: ci.yml
data/: transactions.json
include/controller/: TransactionController.h
include/models/: Account.h  Category.h  Settings.h  Transaction.h
include/services/: ImportExportService.h  NotificationService.h  StatisticsService.h
include/storage/: FileStorage.h  IStorage.h  TransactionRepository.h
src/: FileStorage.cpp  ImportExportService.cpp  NotificationService.cpp  StatisticsService.cpp  TransactionController.cpp  TransactionRepository.cpp  main.cpp
tests/: fuzz_driver.cpp  fuzz_target.cpp  fuzz_target_afl.cpp  fuzz_target_libfuzzer.cpp  simple_fuzzer.py  test_integration.cpp  test_statistics_service.cpp  test_transaction_repository.cpp
